--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 ﻿<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-end" *ngIf="currentUser">
-  <span class="navbar-brand align-middle">SODA PARKING - Admin</span>
+  <span class="navbar-brand align-middle">Parker app Admin</span>
   <button class="btn btn-success ml-auto mr-1" (click)="logout()">Logout</button>
 </nav>
 <!-- main app container -->
