--- a/src/app/google-map/google-map.component.html
+++ b/src/app/google-map/google-map.component.html
@@ -3,16 +3,24 @@
   <form *ngIf="isNewLine" [formGroup]="saveLineForm" (ngSubmit)="onSubmitSave()">
     <div class="parent-div-class">
       <div class="child-div-class">
-        <div class="label-text">Name: </div><input class="input-style-class" type="text" list="streetsNear" [value]="lineName" formControlName="lineName" />
+        <div class="label-text">Name: </div><input class="form-control" type="text" list="streetsNear" [value]="lineName" formControlName="lineName" />
         <datalist id="streetsNear">
           <option *ngFor="let valore of listOfStreets" [value]="valore"></option>
         </datalist>
       </div>
       <div class="child-div-class">
-        <div class="label-text">Start: </div><input class="input-style-class" type="text" [value]="startPointForm | json"/>
+        <div class="label-text">Start: </div><input class="form-control" type="text" [value]="startPointForm | json"/>
       </div>
       <div class="child-div-class">
-        <div class="label-text">End: </div><input class="input-style-class" type="text" [value]="endPointForm | json"/>
+        <div class="label-text">End: </div><input class="form-control" type="text" [value]="endPointForm | json"/>
+      </div>
+      <div class="child-div-class">
+        <div class="label-text">Rule name: </div>
+        <select [(ngModel)]='ruleName' [value]='ruleName' class='form-control' formControlName="ruleName">
+          <option value='RULE_A'>Rule A</option>
+          <option value='RULE_B'>Rule B</option>
+          <option value='RULE_C'>Rule C</option>
+        </select>
       </div>
     </div>
     <hr>
@@ -39,13 +47,21 @@
   <form *ngIf="isEditLine" [formGroup]="editLineForm" (ngSubmit)="onSubmitEdit()">
     <div class="parent-div-class">
       <div class="child-div-class">
-        <div class="label-text">Name: </div><input class="input-style-class" type="text" formControlName="lineName" />
+        <div class="label-text">Name: </div><input class="form-control" type="text" formControlName="lineName" />
       </div>
       <div class="child-div-class">
-        <div class="label-text">Start: </div><input class="input-style-class" type="text" [value]="startPointForm | json"/>
+        <div class="label-text">Start: </div><input class="form-control" type="text" [value]="startPointForm | json"/>
       </div>
       <div class="child-div-class">
-        <div class="label-text">End: </div><input class="input-style-class" type="text" [value]="endPointForm | json"/>
+        <div class="label-text">End: </div><input class="form-control" type="text" [value]="endPointForm | json"/>
+      </div>
+      <div class="child-div-class">
+        <div class="label-text">Rule name: </div>
+        <select class='form-control' formControlName="ruleName">
+          <option value='RULE_A'>Rule A</option>
+          <option value='RULE_B'>Rule B</option>
+          <option value='RULE_C'>Rule C</option>
+        </select>
       </div>
     </div>
     <hr>
@@ -74,6 +90,8 @@
 
     Start: {{this.selectedLineObject.lineCoordinates.start  | json}} <br/>
     End: {{this.selectedLineObject.lineCoordinates.end  | json}} <br/>
+    <hr>
+    Rule name: {{this.selectedLineObject.ruleName === 'RULE_A' ? 'Rule A' : this.selectedLineObject.ruleName === 'RULE_B' ? 'Rule B' : 'Rule C'}}
     <hr>
     Tolerance: {{this.selectedLineObject.lineTolerance}}<br/>
     <p class="text-center">{{ this.selectedLineObject.lineTolerance * this.toleranceParamStart + 'm' }}</p>
